--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -2,11 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
-  height: 200px;
-  width: 200px;
+  height: 225px;
+  width: 175px;
   margin: 10px 15px;
   padding: 5px 10px;
   border-radius: 5px;
   background-color: #d3d3d3;
+}
+
+.Pokecard-img {
+  height: 125px;
+  width: 125px;
+}
+
+.Pokecard-name {
+  color: #1500ff;
 }
