--- a/src/Pokedex.css
+++ b/src/Pokedex.css
@@ -3,10 +3,14 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
-  justify-content: center;
+
   align-items: center;
 }
 
+.Pokedex-title {
+  color: #a9a9a9;
+  margin: 25px 0;
+}
 .Pokedex-cards-container {
   display: flex;
   flex-wrap: wrap;
